integration_tests/codegen_fail/fail/union/trait_method_conflicts_with_external_resolver_fn.rs
use juniper::{graphql_union, GraphQLObject};

#[graphql_union(on Human = some_fn)]
trait Character {
    fn a(&self) -> Option<&Human>;
}

#[derive(GraphQLObject)]
pub struct Human {
    id: String,
}

fn main() {}
